[tool.poetry]
name = "python-watcher"
version = "0.1.0"
description = ""
authors = ["Nick Santana <nick@mobilecoin.com>"]
readme = "README.md"
packages = [{include = "python_watcher"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lmdb = "^1.4.1"
pandas = "^2.1.2"
jupyter = "^1.0.0"
betterproto = {version = "^1.2.5", extras = ["compiler"]}
plotly = "^5.18.0"
black = "^23.10.1"
polars = "^0.19.12"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
